<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/nome"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_bita"
        android:layout_width="400dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/mundo_bita1" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:layout_margin="10dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/img_bita"
        app:layout_constraintTop_toBottomOf="@id/img_bita" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDescricao"
        app:layout_constraintTop_toBottomOf="@id/txtDescricao"
        app:layout_constraintStart_toStartOf="@id/txtDescricao"
        style="@style/card">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDescricao"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtAbilidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abilidades"
        android:layout_margin="10dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/img_bita"
        app:layout_constraintTop_toBottomOf="@id/cardDescricao" />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@id/txtAbilidade"
        app:layout_constraintStart_toStartOf="@id/txtAbilidade"
        style="@style/card">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAbilidade"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAbilidades"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBtnAbilidade"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noturno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>